update modules folder

--- a/movie_search/package.json
+++ b/movie_search/package.json
@@ -8,6 +8,7 @@
   "author": "Kshem",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
