--- a/WeatherAPI/package.json
+++ b/WeatherAPI/package.json
@@ -9,6 +9,7 @@
   "author": "Kshem",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "locus": "^2.0.4",
     "request": "^2.88.2",
